<resources>
    <string name="app_name">BlogApp</string>
    <string name="password_hint">Password..</string>
    <string name="email_hint">Your Email..</string>
    <string name="login_logo_desc">LogoLoginPage</string>
    <string name="register_logo_desc">LogoRegisterPage</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new account ?</string>
    <string name="action_search_txt">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_txt">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account ?</string>
    <string name="reg_confm_pass_txt">Confirm Password..</string>
    <string name="setup_name_hint_text">Your Name..</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Descripton</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notif_text">Notifications</string>
    <string name="bottom_ac_text">Account</string>
</resources>
